fix(markdown): blockquotes could appear behind thumbnail
https://developer.mozilla.org/en-US/docs/Web/CSS/display#grouped_values:~:text=parent%20formatting%20context.-,flow%2Droot,new%20block%20formatting%20context%2C%20defining%20where%20the%20formatting%20root%20lies.,-table

--- a/src/components/markdown/markdown.module.css
+++ b/src/components/markdown/markdown.module.css
@@ -20,6 +20,7 @@
   border-left: 2px solid var(--markdown-blockquote-border);
   color: var(--markdown-blockquote);
   white-space: normal;
+  display: flow-root;
 }
 
 .markdown li {
